# macro-stress-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  optimize.py  pyproject.toml
notebooks/: analysis.ipynb  read_data.ipynb  stress_score_eda.ipynb  weight_optimizer.ipynb
src/macro_stress/: features.py  fetch_data.py  pipeline.py  process_data.py
src/macro_stress_ml/: __init__.py  optimizer.py
src/macro_stress_optimizer/: __init__.py  labels.py  optimizer.py
src/macro_stress_pipeline/: features.py  pipeline.py  process_data.py
tests/: test_features.py  test_labels.py  test_optimizer.py  test_pipeline.py  test_process_data.py
