[project]
name = "macro-stress-ml"
version = "0.1.0"
description = "Macro stress pipeline with ML weight optimizer: learns optimal per-indicator weights by maximizing AUC against realized SPY drawdown labels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fredapi>=0.5.2",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "notebook>=7.5.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macro_stress_pipeline", "src/macro_stress_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]
